<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences">

    <EditTextPreference
        android:defaultValue="3"
        android:inputType="number"
        android:key="mapWidth"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/preference_map_width" />
    <EditTextPreference
        android:defaultValue="3"
        android:inputType="number"
        android:key="mapHeight"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/preference_map_height" />
    <EditTextPreference
        android:defaultValue="5"
        android:inputType="number"
        android:key="arrows"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/preference_arrows" />
</PreferenceScreen>